syntax = "proto3";


option java_multiple_files = true;

package com.betpawa.wallet.api.proto;

service WalletGrpcService {
  rpc reserveMoney(MoneyTransferRequest) returns (MoneyTransferResponse){}
  rpc addMoney(MoneyTransferRequest) returns (MoneyTransferResponse){}
  rpc balance(AccountDetailsRequest) returns (BalanceResponse){}
}

message AccountDetailsRequest {
  int64 account_id = 1;
}
message BalanceResponse {
  int64 account_id = 1;
  uint64 amount = 2;
}
message MoneyTransferRequest {
  int64 account_id = 1;
  uint64 amount = 2;
  string reference = 3; // identifier for transaction/bet
}
enum TransferStatus {
  FAILURE = 0;
  SUCCESS = 1;
  NOT_ENOUGH_MONEY = 2;
}
message MoneyTransferResponse {
  int64 account_id = 1;
  TransferStatus status = 2;
  string message = 3; // in case of failure, here could info about fauilure
}